Add package definitions Handle exception caused by Eclipse verion notation

--- a/packages/App/AdoptiumTemurin11/App.json
+++ b/packages/App/AdoptiumTemurin11/App.json
@@ -1,25 +1,25 @@
 {
   "Application": {
-    "Name": "7-Zip",
-    "Filter": "Get-EvergreenApp -Name \"7Zip\" | Where-Object { $_.Architecture -eq \"x64\" -and $_.Type -eq \"msi\" }",
-    "Title": "7-Zip",
-    "Language": "English",
+    "Name": "AdoptiumTemurin11",
+    "Filter": "Get-EvergreenApp -Name \"AdoptiumTemurin11\" | Where-Object { $_.ImageType -eq \"jre\" -and $_.Architecture -eq \"x64\" -and $_.Type -eq \"msi\" }",
+    "Title": "Eclipse Temurin",
+    "Language": "en-US",
     "Architecture": "x64"
   },
   "PackageInformation": {
     "SetupType": "MSI",
-    "SetupFile": "7z2501-x64.msi",
-    "Version": "25.01",
+    "SetupFile": "OpenJDK11U-jre_x64_windows_hotspot_11.0.28_6.msi",
+    "Version": "11.0.28+6",
     "SourceFolder": "Source",
     "OutputFolder": "Package",
     "IconFile": "https://github.com/aaronparker/icons/raw/main/companyportal/Package.png"
   },
   "Information": {
-    "DisplayName": "7-Zip 25.01 x64",
-    "Description": "The OLE DB Driver for SQL Server is a stand-alone data access application programming interface (API), that is part of OLE DB.",
-    "Publisher": "Microsoft",
-    "InformationURL": "https://learn.microsoft.com/en-us/sql/connect/oledb/oledb-driver-for-sql-server?view=sql-server-ver16",
-    "PrivacyURL": "https://privacy.microsoft.com/privacystatement",
+    "DisplayName": "Eclipse Temurin 11.0.28+6 x64",
+    "Description": "Eclipse Temurin is an open-source Java runtime that provides high-performance, cross-platform binaries for the Java ecosystem.",
+    "Publisher": "Eclipse",
+    "InformationURL": "https://aka.ms/PowerShell-docs",
+    "PrivacyURL": "https://adoptium.net/en-GB/temurin",
     "Categories": [],
     "PSPackageFactoryGuid": "27e8b145-6434-44b7-a1d7-90172bec588a"
   },
@@ -43,7 +43,7 @@
       "Path": "C:\\Program Files\\PowerShell\\7",
       "FileOrFolder": "pwsh.exe",
       "Operator": "greaterThanOrEqual",
-      "VersionValue": "25.01",
+      "VersionValue": "11.0.28+6",
       "Check32BitOn64System": "false"
     }
   ],
