--- a/packages/App/CitrixWorkspaceAppCurrent/App.json
+++ b/packages/App/CitrixWorkspaceAppCurrent/App.json
@@ -1,21 +1,21 @@
 {
   "Application": {
     "Name": "CitrixWorkspaceApp",
-    "Filter": "Get-EvergreenApp -Name \"CitrixWorkspaceApp\" | Where-Object { $_.Stream -eq \"Current\" -and $_.Title -match \"Citrix Workspace\" } | Select-Object -First 1",
+    "Filter": "Get-EvergreenApp -Name \"CitrixWorkspaceApp\" | Where-Object { $_.Stream -eq \"Current\" } | Select-Object -First 1",
     "Title": "Citrix Workspace app Current Release",
     "Language": "en-US",
     "Architecture": "x86"
   },
   "PackageInformation": {
     "SetupType": "EXE",
-    "SetupFile": "CitrixWorkspaceApp24.5.0.131.exe",
-    "Version": "24.5.0.131",
+    "SetupFile": "CitrixWorkspaceApp25.3.10.69.exe",
+    "Version": "25.3.10.69",
     "SourceFolder": "Source",
     "OutputFolder": "Package",
     "IconFile": "https://github.com/aaronparker/icons/raw/main/companyportal/Citrix-WorkspaceApp.png"
   },
   "Information": {
-    "DisplayName": "Citrix Workspace app Current Release 24.5.0.131",
+    "DisplayName": "Citrix Workspace app Current Release 25.3.10.69",
     "Description": "When powered by Citrix Workspace services, the new Citrix Workspace app gives users instant access to all their SaaS and web apps, their files and mobile apps, and their virtual apps and desktops from an easy-to-use, all-in-one interface. Citrix Workspace app is a single point of entry to all workspace services for users. Users get seamless and secure access to all the apps that they need to stay productive, including features such as embedded browsing and single sign-on.",
     "Publisher": "Citrix",
     "InformationURL": "https://docs.citrix.com/en-us/citrix-workspace-app-for-windows.html",
@@ -43,7 +43,7 @@
       "KeyPath": "HKEY_LOCAL_MACHINE\\SOFTWARE\\WOW6432Node\\Microsoft\\Windows\\CurrentVersion\\Uninstall\\CitrixOnlinePluginPackWeb",
       "ValueName": "DisplayVersion",
       "Operator": "greaterThanOrEqual",
-      "Value": "24.5.0.131",
+      "Value": "25.3.10.69",
       "Check32BitOn64System": "false"
     },
     {
@@ -52,7 +52,7 @@
       "KeyPath": "HKEY_LOCAL_MACHINE\\SOFTWARE\\Wow6432Node\\Citrix\\ICA Client\\AutoUpdate\\Commandline Policy",
       "ValueName": "LTSROnly",
       "Operator": "equal",
-      "Value": "24.5.0.131",
+      "Value": "25.3.10.69",
       "Check32BitOn64System": "false"
     },
     {
@@ -61,7 +61,7 @@
       "Path": "C:\\Program Files (x86)\\Citrix\\ICA Client",
       "FileOrFolder": "wfica32.exe",
       "Operator": "greaterThanOrEqual",
-      "VersionValue": "24.5.0.131",
+      "VersionValue": "25.3.10.69",
       "Check32BitOn64System": "false"
     }
   ],
