--- a/packages/App/MicrosoftODBCDriverForSQLServer18/App.json
+++ b/packages/App/MicrosoftODBCDriverForSQLServer18/App.json
@@ -1,24 +1,24 @@
 {
   "Application": {
-    "Name": "7-Zip",
-    "Filter": "Get-EvergreenApp -Name \"7Zip\" | Where-Object { $_.Architecture -eq \"x64\" -and $_.Type -eq \"msi\" }",
-    "Title": "7-Zip",
+    "Name": "MicrosoftODBCDriverForSQLServer",
+    "Filter": "Get-EvergreenApp -Name \"MicrosoftODBCDriverForSQLServer\" | Where-Object { $_.Language -eq \"English\" -and $_.Architecture -eq \"x64\" -and $_.Type -eq \"msi\" }",
+    "Title": "MicrosoftODBCDriverForSQLServer",
     "Language": "English",
     "Architecture": "x64"
   },
   "PackageInformation": {
     "SetupType": "MSI",
-    "SetupFile": "7z2501-x64.msi",
-    "Version": "25.01",
+    "SetupFile": "msodbcsql.msi",
+    "Version": "18.3.3.1",
     "SourceFolder": "Source",
     "OutputFolder": "Package",
     "IconFile": "https://github.com/aaronparker/icons/raw/main/companyportal/Package.png"
   },
   "Information": {
-    "DisplayName": "7-Zip 25.01 x64",
-    "Description": "The OLE DB Driver for SQL Server is a stand-alone data access application programming interface (API), that is part of OLE DB.",
+    "DisplayName": "MicrosoftODBCDriverForSQLServer 18.3.3.1 x64",
+    "Description": "Microsoft ODBC Driver for SQL Server is a single dynamic-link library (DLL) containing run-time support for applications using native-code APIs to connect to SQL Server.",
     "Publisher": "Microsoft",
-    "InformationURL": "https://learn.microsoft.com/en-us/sql/connect/oledb/oledb-driver-for-sql-server?view=sql-server-ver16",
+    "InformationURL": "https://learn.microsoft.com/en-us/sql/connect/odbc/download-odbc-driver-for-sql-server?view=sql-server-ver18",
     "PrivacyURL": "https://privacy.microsoft.com/privacystatement",
     "Categories": [],
     "PSPackageFactoryGuid": "27e8b145-6434-44b7-a1d7-90172bec588a"
@@ -43,7 +43,7 @@
       "Path": "C:\\Program Files\\PowerShell\\7",
       "FileOrFolder": "pwsh.exe",
       "Operator": "greaterThanOrEqual",
-      "VersionValue": "25.01",
+      "VersionValue": "18.3.3.1",
       "Check32BitOn64System": "false"
     }
   ],
